--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
