--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "table-js": "^9.2.0",
+    "zod": "^4.1.11",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
