--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "prisma": "^5.13.0"
+    "nodemon": "^3.1.0"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
