--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,10 +27,12 @@
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
     "table-js": "^9.2.0",
     "zod": "^4.1.11",
